@@ -1,5 +1,5 @@
 /*
- * "$Id: ipp.c,v 1.127.2.16 2002/06/11 18:40:08 mike Exp $"
+ * "$Id: ipp.c,v 1.127.2.17 2002/06/27 15:10:40 mike Exp $"
  *
  *   IPP routines for the Common UNIX Printing System (CUPS) scheduler.
  *
@@ -798,6 +798,8 @@ add_class(client_t        *con,		/* I - Client connection */
   SaveAllClasses();
   CheckJobs();
 
+  WritePrintcap();
+
   if (modify)
     LogMessage(L_INFO, "Class \'%s\' modified by \'%s\'.", pclass->name,
                con->username);
@@ -1351,6 +1353,8 @@ add_printer(client_t        *con,	/* I - Client connection */
   }
 
   CheckJobs();
+
+  WritePrintcap();
 
   if (modify)
     LogMessage(L_INFO, "Printer \'%s\' modified by \'%s\'.", printer->name,
@@ -5789,5 +5793,5 @@ validate_user(client_t   *con,		/* I - Client connection */
 
 
 /*
- * End of "$Id: ipp.c,v 1.127.2.16 2002/06/11 18:40:08 mike Exp $".
+ * End of "$Id: ipp.c,v 1.127.2.17 2002/06/27 15:10:40 mike Exp $".
  */
